--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
     "aos": "^3.0.0-beta.6",
+    "datocms-structured-text-utils": "^2.0.4",
     "next": "^13.4.1",
     "react": "18.2.0",
+    "react-datocms": "^4.0.15",
     "react-dom": "18.2.0",
     "react-hotjar": "^5.3.0",
     "superjson": "1.12.2",
+    "typewriter-effect": "^2.19.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -34,13 +37,13 @@
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.36.0",
+    "eslint": "^8.41.0",
     "eslint-config-next": "^13.4.1",
     "postcss": "^8.4.21",
     "prettier": "^2.8.6",
     "prettier-plugin-tailwindcss": "^0.2.6",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.4"
   },
   "ct3aMetadata": {
     "initVersion": "7.13.0"
