--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-hotjar": "^5.3.0",
     "superjson": "1.12.2",
+    "swiper": "^9.3.2",
     "typewriter-effect": "^2.19.0",
     "zod": "^3.21.4"
   },
