--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "@types/swiper": "^6.0.0",
     "aos": "^3.0.0-beta.6",
     "datocms-structured-text-utils": "^2.0.4",
     "next": "^13.4.1",
