--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-datocms": "^4.0.15",
     "react-dom": "18.2.0",
     "react-hotjar": "^5.3.0",
+    "react-scroll": "^1.8.9",
     "superjson": "1.12.2",
     "swiper": "^9.3.2",
     "typewriter-effect": "^2.19.0",
